tests/ui/suggestions/issue-101421.stderr
error[E0107]: method takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/issue-101421.rs:10:8
   |
LL |     ().f::<()>(());
   |        ^------ help: remove these generics
   |        |
   |        expected 0 generic arguments
   |
note: method defined here, with 0 generic parameters
  --> $DIR/issue-101421.rs:2:8
   |
LL |     fn f(&self, _: ());
   |        ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
